2009-07-30  Ankit Jain  <jankit@novell.com>

	* Engine.cs (.ctor): Set default BinPath. Currently this assumes
	v2.0, this will change when multi-targeting lands.

2009-07-30  Ankit Jain  <jankit@novell.com>

	* Project.cs (InitializeProperties) Set 'MSBuildProjectFile' and
	'MSBuildProjectName' properties.

2009-07-28  Ankit Jain  <jankit@novell.com>

	* TaskEngine.cs (Prepare): Fix formatting mistake.
	* ConsoleLogger.cs: Emit "-- FAILED" also when project/target building
	fails. Also, emit result of project at Normal verbosity level.

2009-07-23  Ankit Jain  <jankit@novell.com>

	Fix bug #511370.
	* Project.cs (ExtensionsPath): New.
	(InitializeProperties): Set "MSBuildExtensionsPath" property.

2009-06-12  Ankit Jain  <jankit@novell.com>

	Fix bug #512535.
	* ExpressionCollection.cs (ConvertToITaskItemArray): Whitespace around a
	itemref is allowed if the prev/next element is ";".

2009-06-12  Ankit Jain  <jankit@novell.com>

	* Utilities.cs (FromMSBuildPath): Return null if the path contains
	"drive:" only on windows.

2009-06-07  Ankit Jain  <jankit@novell.com>

	* Target.cs (Outputs): Use ITaskItem[] for conversion, to retain
	the metadata.

2009-05-29  Ankit Jain  <jankit@novell.com>

	Correctly handle global properties. Correctly log
	project/build events.

	* BuildPropertyGroup.cs (Clone): Implement.
	* Engine.cs (globalProperties): Rename to ..
	(global_properties): .. this.
	(currentlyBuildingProjectsStack): New. Used to correctly
	log and raise project/build start/finish events.
	(BuildProjectFile): Override any project global properties
	with explicitly specified ones, here in the param @globalProperties.
	Mark project for reevaluation, which will update the engine's
	global properties also.
	Reset both engine and project's old global properties at the end.
	(UnregisterAllLoggers): Log build finished only if we are currently
	building.
	(StartBuild): Rename to ..
	(StartProjectBuild): .. this. Keeps track of the projects being built