@@ -1,3 +1,9 @@
+2009-07-31  Ankit Jain  <jankit@novell.com>
+
+	* Target.cs (Build): Log a message if a target is skipped.
+	(LogMessage): New.
+	* BuildTask.cs (Execute): Log error if task execution fails.
+
 2009-07-30  Ankit Jain  <jankit@novell.com>
 
 	* Engine.cs (.ctor): Set default BinPath. Currently this assumes
